0031459: Visualization, AIS_TextLabel - add missing getters

Add getters for Text, FontName and FontAspect
Remove duplicate properties: Font and FontAspect